# SWGS-VIO

./: README.md
swgs_loop_closure/: CMakeLists.txt  package.xml
swgs_loop_closure/src/: pose_graph.cpp
swgs_mapping/: CMakeLists.txt  package.xml
swgs_vio/: CMakeLists.txt  main.cpp  package.xml
swgs_vio/include/: configManager.h  swgs_vio.h
swgs_vio/src/: configManager.cpp  pose_graph_node.cpp  swgs_vio.cpp
visualization/rviz/: swgs_vio.rviz
