<?xml version="1.0"?>
<package>
  <name>swgs_loop_closure</name>
  <version>0.0.0</version>
  <description>swgs_loop_closure package</description>

  <maintainer email="luohongkun0715@gmail.com">Hongkun Luo</maintainer>

  <license>TODO</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_models</build_depend>
  <run_depend>camera_models</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>