<?xml version="1.0"?>
<package>
  <name>swgs_mapping</name>
  <version>0.0.0</version>
  <description>swgs_mapping package</description>
  <maintainer email="luohongkun0715@gmail.com">Hongkun Luo</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_models</build_depend>
  <run_depend>camera_models</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>