<?xml version="1.0"?>
<package>
  <name>swgs_vio</name>
  <version>0.0.0</version>
  <description>swgs_vio package</description>
  <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_models</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_models</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>